--- a/style.css
+++ b/style.css
@@ -80,28 +80,42 @@ font-weight: 600;
 .about-container{
     min-width: 100%;
     height: 100%;
-    border-color: #123;
+    border-color: rgb(13, 13, 14);
     padding: 100px 0;
     background-color: black;
 
 }
 .about-ps{
     width: 70vw;
-    height: 70vw;
+    height: 70vh;
     /* border: 2px solid white; */
     margin:   0 auto;
     display: flex;
 }
- .ps-content, .video-container
+ 
+  .video-container,.ps-content
   { 
-    height: 50%;
+    height: 70%;
     width: 100%;
     border: 2px solid white;
     margin: 10px;
-    padding: 20px 20px 20px 20px;
-
-
+    padding: 0 0 10px 10px ;
 }
+
+.ps-content >h1{
+    font-size: 22px;
+    text-align: center;
+    color: #eeeeee;
+    padding: 5px 2px 2px 2px;
+}
+   .ps-content> p{
+    font-size: 22px;
+    text-align: center;
+    color: #eeeeee;
+
+   } 
+
+
 .ceo-container{
     width: 70vw;
     height: 70vh;
