--- a/style.css
+++ b/style.css
@@ -152,9 +152,9 @@ color: white;
     background-color: black ;
     color: white;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     /* border: 2px solid white; */
-    padding: 100px 0;
+    padding:  0  5px;
 }
 .carousal-container>h5{
     text-align: center;
@@ -192,10 +192,11 @@ color: white;
   transition: transform 0.4s ease, opacity 0.4s ease;
 }
 .swiper-slide > img {
-  height: 80%;
+  max-height: 100%;
   width: 100%;
   border-radius: 20px;
   object-fit: cover;
+ 
 }
 
 /* Side slides */
@@ -244,8 +245,8 @@ font-size: 18px;
 .swiper-slide-content> p{
     font-size: 12px;
     text-align: center;
+   
 }
-
 .swiper-slide-content> button{
     padding: 8px 15px;
     border-radius: 20px;
@@ -262,7 +263,7 @@ color: white;font-weight: 700;
     background-position: center;
      background-repeat: no-repeat; 
     background-size: cover;
-    position: relative;
+     position: relative;
     border: none;
 
 }
@@ -270,7 +271,7 @@ color: white;font-weight: 700;
    max-width: 500px;
     width: 90%;
     height: auto;
-      /* border: 5px solid red;   */
+       /* border: 5px solid red;    */
     position: absolute;
     top: 50%;
     left: 22%;
